--- a/jupyter_notebook/FIZ219_EST_UygulamaNotlari_04_02_GrafikCizimi.ipynb
+++ b/jupyter_notebook/FIZ219_EST_UygulamaNotlari_04_02_GrafikCizimi.ipynb
@@ -1673,10 +1673,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aralığı 0 ile 1'den a ile b'ye nasıl değiştiririz? $\\(a-b\\) ile çarpıp, $a$ ekleyerek! ;)"
+    "Aralığı 0 ile 1'den a ile b'ye nasıl değiştiririz? $(a-b)$ ile çarpıp, $a$ ekleyerek! ;)"
    ]
   },
   {
