--- a/jupyter_notebook/FIZ219_EST_UygulamaNotlari_05_02_DonguVeKararCumleleri_I.ipynb
+++ b/jupyter_notebook/FIZ219_EST_UygulamaNotlari_05_02_DonguVeKararCumleleri_I.ipynb
@@ -1458,7 +1458,7 @@
     "3. x1 = x0 + adim_boyu olarak tanımla.\n",
     "4. b = 3*x1^2-7*x1+4 olarak hesaplayıp tanımla.\n",
     "5. (a): a ile b'nin işaretleri birbirinden farklı ise aralarında kök var demektir.  \n",
-    "   kok = (a+b)/2 olarak yazdırıp programı bitir.  \n",
+    "   kok = (x0+x1)/2 olarak yazdırıp programı bitir.  \n",
     "   (b): a ile b'nin işareti aynı ise, arasında kök olmadığını varsayıp,  \n",
     "   x0'a x1'in, a'ya b'nin değerini atayıp, 3. adıma git.\n",
     "\n",
@@ -1475,6 +1475,13 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
